fix: updated return type of return book endpoint